--- a/deploy_route_redist.yml
+++ b/deploy_route_redist.yml
@@ -19,6 +19,7 @@
       prefixes:
         - {name: "{{ prefix1.name }}", network: "{{ prefix1.network }}" }
       rules:
+	    #redistribute summary route
         - {learner: 'ospf', priority: 0, static: 'true', connected: 'false', bgp: 'false', ospf: 'false', prefix: "{{ prefix1.name }}", action: 'permit'}
     register: redist
     tags: redist
@@ -32,7 +33,8 @@
       prefixes:
         - {name: "{{ prefix1.name }}", network: "{{ prefix1.network }}" }
       rules:
-        - {learner: 'ospf', priority: 0, static: 'true', connected: 'false', bgp: 'false', ospf: 'false', prefix: "{{ prefix1.name }}", action: 'permit'}
+        #Redistribute summary route 
+		- {learner: 'ospf', priority: 0, static: 'true', connected: 'false', bgp: 'false', ospf: 'false', prefix: "{{ prefix1.name }}", action: 'permit'}
     register: redist
     tags: redist
 
@@ -43,7 +45,8 @@
       nsxmanager_spec: "{{ nsxmanager_spec }}"
       edge_name: "{{ dlr.name }}"
       rules:
-        - {learner: 'ospf', priority: 0, static: false, connected: true, bgp: false, ospf: false, action: 'permit'}
+        #Redistributes connected routes - uncomment if needed
+		#- {learner: 'ospf', priority: 0, static: false, connected: true, bgp: false, ospf: false, action: 'permit'}
     register: redist
     tags: redist
 
