--- a/answerfile_deploy.yml
+++ b/answerfile_deploy.yml
@@ -228,7 +228,7 @@ esg2:
 
 
 #OSPF variable definitions
-area_abr:
+area_backbone:
   area_id: '0'
   type: 'normal'
 area_stub:
@@ -237,7 +237,7 @@ area_stub:
 
 #Area to interface Mapping
 area_uplink1:
-  area_id: '0'
+  area_id: '10'
   vnic: '0'
   hello: '1'
   deadtime: '3'
@@ -245,7 +245,7 @@ area_uplink1:
   #cost:
   ignore_mtu: 'True'
 area_uplink2:
-  area_id: '0'
+  area_id: '10'
   vnic: '1'
   hello: '1'
   deadtime: '3'
