--- a/answerfile_deploy.yml
+++ b/answerfile_deploy.yml
@@ -99,13 +99,13 @@ targetClusters:
   cluster1:
     clusterName: 'Mgmt-Edge-Home'
     dvs: 'vDS-Home'
-    vmknic_count: '1'
+    vmknic_count: '2'
     teaming: 'LOADBALANCE_SRCID'
     mtu: '9000'
   cluster2:
     clusterName: 'Compute-Home'
     dvs: 'vDS-Home'
-    vmknic_count: '1'
+    vmknic_count: '2'
     teaming: 'LOADBALANCE_SRCID'
     mtu: '9000'
 
@@ -282,7 +282,7 @@ dlr:
   ha_deadtime: '15'
   router_id: '10.10.100.9'
   protocol_address: '10.10.100.15'
-  graceful_restart: 'false'
+  graceful_restart: 'true'
   ecmp: 'true'
   #DLR Interface configuration
   #vnic0 maps to uplink interface
