--- a/deploy_bgp.yml
+++ b/deploy_bgp.yml
@@ -18,12 +18,12 @@
       localas: "{{ esg1.localas }}"
       default_originate: "{{ esg1.default_originate }}"
       graceful_restart: "{{ esg1.graceful_restart }}"
-      router_id: "{{ esg1.route_id }}"
+      router_id: "{{ esg1.router_id }}"
       ecmp: "{{ esg1.ecmp }}"
       bgp_neighbours: 
-        - { 'ipAddress': "{{ esg1.bgp_neighbour.n1.ipaddress }}", 'remoteAS': "{{ esg1.bgp_neighbour.n1.remoteas }}"}
-        - { 'ipAddress': "{{ esg1.bgp_neighbour.n2.ipaddress }}", 'remoteAS': "{{ esg1.bgp_neighbour.n2.remoteas }}"}
-        - { 'ipAddress': "{{ esg1.bgp_neighbour.n3.ipaddress }}", 'remoteAS': "{{ esg1.bgp_neighbour.n3.remoteas }}"}
+        - { 'ipAddress': "{{ esg1.bgp.n1.ipaddress }}", 'remoteAS': "{{ esg1.bgp.n1.remoteas }}"}
+        - { 'ipAddress': "{{ esg1.bgp.n2.ipaddress }}", 'remoteAS': "{{ esg1.bgp.n2.remoteas }}"}
+        - { 'ipAddress': "{{ esg1.bgp.n3.ipaddress }}", 'remoteAS': "{{ esg1.bgp.n3.remoteas }}"}
     register: bgp_esg
     tags: bgp_esg
 
@@ -33,14 +33,15 @@
       nsxmanager_spec: "{{ nsxmanager_spec }}"
       state: present
       edge_name: "{{ esg2.name }}"
-      router_id: "{{ esg2.router_id }}"
+      localas: "{{ esg2.localas }}"
       default_originate: "{{ esg2.default_originate }}"
       graceful_restart: "{{ esg2.graceful_restart }}"
+      router_id: "{{ esg2.router_id }}"
       ecmp: "{{ esg2.ecmp }}"
-      bgp_nieghbours:
-        - { 'ipAddress': "{{ esg2.bgp_neighbour.n1.ipaddress }}", 'remoteAS': "{{ esg2.bgp_neighbour.n1.remoteas }}"}
-        - { 'ipAddress': "{{ esg2.bgp_neighbour.n2.ipaddress }}", 'remoteAS': "{{ esg2.bgp_neighbour.n2.remoteas }}"}
-        - { 'ipAddress': "{{ esg2.bgp_neighbour.n3.ipaddress }}", 'remoteAS': "{{ esg2.bgp_neighbour.n3.remoteas }}"}
+      bgp_neighbours:
+        - { 'ipAddress': "{{ esg2.bgp.n1.ipaddress }}", 'remoteAS': "{{ esg2.bgp.n1.remoteas }}"}
+        - { 'ipAddress': "{{ esg2.bgp.n2.ipaddress }}", 'remoteAS': "{{ esg2.bgp.n2.remoteas }}"}
+        - { 'ipAddress': "{{ esg2.bgp.n3.ipaddress }}", 'remoteAS': "{{ esg2.bgp.n3.remoteas }}"}
     register: bgp_esg
     tags: bgp_esg
 
@@ -54,8 +55,8 @@
       graceful_restart: "{{ dlr.graceful_restart }}"
       ecmp: "{{ dlr.ecmp }}"
       bgp_neighbours:
-        - { 'ipAddress': "{{ esg2.bgp_neighbour.n1.ipaddress }}", 'remoteAS': "{{ esg2.bgp_neighbour.n1.remoteas }}", 'forwardingAddress': "{{ dlr.vnic0.ip }}", 'protocolAddress': "{{ dlr.protocol_address }}" }
-        - { 'ipAddress': "{{ esg2.bgp_neighbour.n2.ipaddress }}", 'remoteAS': "{{ esg2.bgp_neighbour.n2.remoteas }}", 'forwardingAddress': "{{ dlr.vnic0.ip }}", 'protocolAddress': "{{ dlr.protocol_address }}"}
+        - { 'ipAddress': "{{ esg2.bgp.n1.ipaddress }}", 'remoteAS': "{{ esg2.bgp.n1.remoteas }}", 'forwardingAddress': "{{ dlr.vnic0.ip }}", 'protocolAddress': "{{ dlr.protocol_address }}" }
+        - { 'ipAddress': "{{ esg2.bgp.n2.ipaddress }}", 'remoteAS': "{{ esg2.bgp.n2.remoteas }}", 'forwardingAddress': "{{ dlr.vnic0.ip }}", 'protocolAddress': "{{ dlr.protocol_address }}"}
     register: bgp_dlr
     tags: bgp_dlr
 
