--- a/deploy_bgp.yml
+++ b/deploy_bgp.yml
@@ -54,9 +54,11 @@
       router_id: "{{ dlr.router_id }}"
       graceful_restart: "{{ dlr.graceful_restart }}"
       ecmp: "{{ dlr.ecmp }}"
+      logging: "true"
+      log_level: "error"
       bgp_neighbours:
-        - { 'ipAddress': "{{ esg2.bgp.n1.ipaddress }}", 'remoteAS': "{{ esg2.bgp.n1.remoteas }}", 'forwardingAddress': "{{ dlr.vnic0.ip }}", 'protocolAddress': "{{ dlr.protocol_address }}" }
-        - { 'ipAddress': "{{ esg2.bgp.n2.ipaddress }}", 'remoteAS': "{{ esg2.bgp.n2.remoteas }}", 'forwardingAddress': "{{ dlr.vnic0.ip }}", 'protocolAddress': "{{ dlr.protocol_address }}"}
+        - { 'ipAddress': "{{ dlr.bgp.n1.ipaddress }}", 'remoteAS': "{{ dlr.bgp.n1.remoteas }}", 'forwardingAddress': "{{ dlr.vnic0.ip }}", 'protocolAddress': "{{ dlr.protocol_address }}" }
+        - { 'ipAddress': "{{ dlr.bgp.n2.ipaddress }}", 'remoteAS': "{{ dlr.bgp.n2.remoteas }}", 'forwardingAddress': "{{ dlr.vnic0.ip }}", 'protocolAddress': "{{ dlr.protocol_address }}"}
     register: bgp_dlr
     tags: bgp_dlr
 
