--- a/answerfile_deploy.yml
+++ b/answerfile_deploy.yml
@@ -312,6 +312,7 @@ dlr:
   protocol_address: '10.10.100.15'
   graceful_restart: 'true'
   ecmp: 'true'
+  firewall: 'false'
   localas: '65001'
   #DLR Interface configuration
   #vnic0 maps to uplink interface
